log
Thu 09 May 2024 05:42:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
6da4d7f
Thu 09 May 2024 07:29:41 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b58a15c
Thu 09 May 2024 07:34:53 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:14: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |   TreeNode * parent = NULL;
      |              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bc5d426
Thu 09 May 2024 07:43:56 PM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  5|7
total_score: 5/70
0e85fde
Thu 09 May 2024 07:55:12 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
124b64b
Thu 09 May 2024 07:59:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
5b723ee
Thu 09 May 2024 08:11:50 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
  100 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b88242
Thu 09 May 2024 08:12:24 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
db49584
Thu 09 May 2024 08:14:36 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|6
total_score: 15/70
3e20f2d
Thu 09 May 2024 08:15:03 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
70a867b
Thu 09 May 2024 08:18:07 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
930577f
Thu 09 May 2024 08:20:39 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 30/70
1c52cd8
Sun 12 May 2024 01:52:14 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
50e3748
Sun 12 May 2024 01:55:18 AM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  18|3
total_score: 35/70
20bcc18
Sun 12 May 2024 02:04:50 AM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
adf2d3e
Sun 12 May 2024 02:05:44 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|3
total_score: 40/70
00ad88f
Sun 12 May 2024 02:07:21 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  20|2
total_score: 45/70
55801fe
Sun 12 May 2024 02:10:23 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  20|2
total_score: 45/70
4f8b211
Sun 12 May 2024 02:13:40 AM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:162:14: error: variable ‘auxNode’ set but not used [-Werror=unused-but-set-variable]
  162 |   TreeNode * auxNode = NULL;
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
40e02f2
Sun 12 May 2024 02:15:40 AM UTC: 
 treemap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  20|2
total_score: 45/70
e2f8880
Sun 12 May 2024 02:20:16 AM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
538a260
Sun 12 May 2024 02:21:52 AM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
d378449
